--- a/app/src/main/res/layout/activity_pagination.xml
+++ b/app/src/main/res/layout/activity_pagination.xml
@@ -48,7 +48,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Tags"
+        android:hint="Tags map"
         android:inputType="text"
         android:id="@+id/Edit_text_description_pagination_tags_map"
 
